--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start-json-server": "json-server --watch db.json",
-    "start": "webpack && npx webpack serve",
-    "dev": "json-server --watch db.json && webpack && npx webpack serve",
-    "watch": "nodemon "
+    "start": "webpack && npx webpack serve"
   },
   "dependencies": {
     "axios": "^0.27.2",
